# physics-engine

./: .gitignore  CMakeLists.txt  next_steps.txt
example/: CMakeLists.txt  example  main.cpp  particle_simulation.cpp  usecase.cpp
physics-core/: BoardPhaseGrid.cpp  BroadPhaseGrid.cpp  BroadPhaseGrid.h  CMakeLists.txt  CollisionSolver.cpp  CollisionSolver.h  Constraint.cpp  Constraint.h  Entity.cpp  Entity.h  EntityStore.cpp  EntityStore.h  Particle.cpp  Particle.h  PhysicsWorld.cpp  PhysicsWorld.h  RelativeConstraint.cpp  RelativeConstraint.h  System.cpp  System.h  Vector.cpp  Vector.h  physics.cpp  physics.h
physics-core/utils/: CMakeLists.txt
tests/: CMakeLists.txt  tests.cpp
